--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>Todo List</title>
+        <title>Notes</title>
     </head>
 
     <body>
